--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -13,16 +13,8 @@ body{
 }
 canvas{
     background:#111;
-    image-rendering: pixelated;
     border:3px solid white;
     margin-top:10px;
-}
-#ui{
-    margin-top:8px;
-}
-button{
-    font-size:16px;
-    margin:4px;
 }
 </style>
 </head>
@@ -30,9 +22,9 @@ button{
 
 <h2>SUPER ROBOT THAISAN 8-BIT</h2>
 <canvas id="game" width="512" height="384"></canvas>
-<div id="ui"></div>
 
 <script>
+
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
@@ -40,39 +32,24 @@ const TILE = 64;
 const MAP_W = 8;
 const MAP_H = 6;
 
-let turn = "player";
-let selected = null;
-
 class Unit{
-    constructor(name,x,y,color,isEnemy=false){
-        this.name=name;
+    constructor(x,y,color){
         this.x=x;
         this.y=y;
         this.color=color;
-        this.hp=100;
-        this.maxHp=100;
-        this.en=50;
-        this.maxEn=50;
-        this.atk=30;
-        this.move=3;
-        this.exp=0;
-        this.level=1;
-        this.isEnemy=isEnemy;
-        this.acted=false;
     }
 }
 
 let units = [
-    new Unit("Alpha",0,0,"cyan"),
-    new Unit("Beta",1,0,"yellow"),
-    new Unit("Gamma",0,1,"lime"),
-    new Unit("Delta",1,1,"orange"),
-    new Unit("Enemy A",6,4,"red",true),
-    new Unit("Enemy B",7,4,"red",true)
+    new Unit(0,0,"cyan"),
+    new Unit(1,0,"yellow"),
+    new Unit(0,1,"lime"),
+    new Unit(1,1,"orange"),
+    new Unit(6,4,"red"),
+    new Unit(7,4,"red")
 ];
 
 function drawGrid(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
     for(let y=0;y<MAP_H;y++){
         for(let x=0;x<MAP_W;x++){
             ctx.strokeStyle="#333";
@@ -83,43 +60,20 @@ function drawGrid(){
 
 function drawUnits(){
     units.forEach(u=>{
-        if(u.hp<=0) return;
         ctx.fillStyle=u.color;
         ctx.fillRect(u.x*TILE+16,u.y*TILE+16,32,32);
-        ctx.fillStyle="white";
-        ctx.fillText("Lv"+u.level,u.x*TILE+5,u.y*TILE+15);
     });
 }
 
 function render(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
     drawGrid();
     drawUnits();
 }
 
-function getUnitAt(x,y){
-    return units.find(u=>u.x===x && u.y===y && u.hp>0);
-}
+render();
 
-canvas.addEventListener("click",e=>{
-    if(turn!=="player") return;
-    const rect=canvas.getBoundingClientRect();
-    const mx=Math.floor((e.clientX-rect.left)/TILE);
-    const my=Math.floor((e.clientY-rect.top)/TILE);
+</script>
 
-    if(selected){
-        let dist=Math.abs(mx-selected.x)+Math.abs(my-selected.y);
-        let target=getUnitAt(mx,my);
-
-        if(target && target.isEnemy){
-            attack(selected,target);
-        }else if(dist<=selected.move && !target){
-            selected.x=mx;
-            selected.y=my;
-            selected.acted=true;
-        }
-        selected=null;
-        checkTurnEnd();
-    }else{
-        let u=getUnitAt(mx,my);
-        if(u && !u.isEnemy && !u.acted){
-            selected=u;
+</body>
+</html>
